# tdiff

./: README.md  stack.yaml  tdiff.cabal
app/: Main.hs
